# ft_ls

./: .gitignore  CMakeLists.txt  Makefile  README.md  alpha_sort.c  args_parsing.c  directories.c  error.c  file_sort.c  files.c  freedom.c  get_struct.c  list_sort.c  long_display.c  main.c  old_main.c  print_attribs.c  printer.c  printer2.c  recursive.c  size.c  struct_manager.c
include/: ft_ls.h
src/: args_parsing.c  comparison.c  comparison2.c  directories.c  error.c  files.c  freedom.c  list_sort.c  main.c  print_attribs.c  printer.c  printer2.c  recursive.c  size.c  sorting.c  struct_manager.c
